istioctl/pkg/describe/testdata/describe/http_config.json
{
  "configs": [
    {
      "@type": "type.googleapis.com/envoy.admin.v3.RoutesConfigDump",
      "dynamic_route_configs": [
        {
          "version_info": "2022-03-04T10:22:24Z/54",
          "route_config": {
            "@type": "type.googleapis.com/envoy.config.route.v3.RouteConfiguration",
            "name": "http.8080",
            "virtual_hosts": [
              {
                "name": "*:80",
                "domains": [
                  "*"
                ],
                "routes": [
                  {
                    "match": {
                      "path": "/productpage",
                      "case_sensitive": true
                    },
                    "route": {
                      "cluster": "outbound|9080||productpage.default.svc.cluster.local",
                      "timeout": "0s",
                      "retry_policy": {
                        "retry_on": "connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes",
                        "num_retries": 2,
                        "retry_host_predicate": [
                          {
                            "name": "envoy.retry_host_predicates.previous_hosts"
                          }
                        ],
                        "host_selection_retry_max_attempts": "5",
                        "retriable_status_codes": [
                          503
                        ]
                      },
                      "max_grpc_timeout": "0s"
                    },
                    "metadata": {
                      "filter_metadata": {
                        "istio": {
                          "config": "/apis/networking.istio.io/v1alpha3/namespaces/default/virtual-service/bookinfo"
                        }
                      }
                    },
                    "decorator": {
                      "operation": "productpage.default.svc.cluster.local:9080/productpage"
                    }
                  },
                  {
                    "match": {
                      "prefix": "/static",
                      "case_sensitive": true
                    },
                    "route": {
                      "cluster": "outbound|9080||productpage.default.svc.cluster.local",
                      "timeout": "0s",
                      "retry_policy": {
                        "retry_on": "connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes",
                        "num_retries": 2,
                        "retry_host_predicate": [
                          {
                            "name": "envoy.retry_host_predicates.previous_hosts"
                          }
                        ],
                        "host_selection_retry_max_attempts": "5",
                        "retriable_status_codes": [
                          503
                        ]
                      },
                      "max_grpc_timeout": "0s"
                    },
                    "metadata": {
                      "filter_metadata": {
                        "istio": {
                          "config": "/apis/networking.istio.io/v1alpha3/namespaces/default/virtual-service/bookinfo"
                        }
                      }
                    },
                    "decorator": {
                      "operation": "productpage.default.svc.cluster.local:9080/static*"
                    }
                  },
                  {
                    "match": {
                      "path": "/login",
                      "case_sensitive": true
                    },
                    "route": {
                      "cluster": "outbound|9080||productpage.default.svc.cluster.local",
                      "timeout": "0s",
                      "retry_policy": {
                        "retry_on": "connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes",
                        "num_retries": 2,
                        "retry_host_predicate": [
                          {
                            "name": "envoy.retry_host_predicates.previous_hosts"
                          }
                        ],
                        "host_selection_retry_max_attempts": "5",
                        "retriable_status_codes": [
                          503
                        ]
                      },
                      "max_grpc_timeout": "0s"
                    },
                    "metadata": {
                      "filter_metadata": {
                        "istio": {
                          "config": "/apis/networking.istio.io/v1alpha3/namespaces/default/virtual-service/bookinfo"
                        }
                      }
                    },
                    "decorator": {
                      "operation": "productpage.default.svc.cluster.local:9080/login"
                    }
                  },
                  {
                    "match": {
                      "path": "/logout",
                      "case_sensitive": true
                    },
                    "route": {
                      "cluster": "outbound|9080||productpage.default.svc.cluster.local",
                      "timeout": "0s",
                      "retry_policy": {
                        "retry_on": "connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes",
                        "num_retries": 2,
                        "retry_host_predicate": [
                          {
                            "name": "envoy.retry_host_predicates.previous_hosts"
                          }
                        ],
                        "host_selection_retry_max_attempts": "5",
                        "retriable_status_codes": [
                          503
                        ]
                      },
                      "max_grpc_timeout": "0s"
                    },
                    "metadata": {
                      "filter_metadata": {
                        "istio": {
                          "config": "/apis/networking.istio.io/v1alpha3/namespaces/default/virtual-service/bookinfo"
                        }
                      }
                    },
                    "decorator": {
                      "operation": "productpage.default.svc.cluster.local:9080/logout"
                    }
                  },
                  {
                    "match": {
                      "prefix": "/api/v1/products",
                      "case_sensitive": true
                    },
                    "route": {
                      "cluster": "outbound|9080||productpage.default.svc.cluster.local",
                      "timeout": "0s",
                      "retry_policy": {
                        "retry_on": "connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes",
                        "num_retries": 2,
                        "retry_host_predicate": [
                          {
                            "name": "envoy.retry_host_predicates.previous_hosts"
                          }
                        ],
                        "host_selection_retry_max_attempts": "5",
                        "retriable_status_codes": [
                          503
                        ]
                      },
                      "max_grpc_timeout": "0s"
                    },
                    "metadata": {
                      "filter_metadata": {
                        "istio": {
                          "config": "/apis/networking.istio.io/v1alpha3/namespaces/default/virtual-service/bookinfo"
                        }
                      }
                    },
                    "decorator": {
                      "operation": "productpage.default.svc.cluster.local:9080/api/v1/products*"
                    }
                  }
                ],
                "include_request_attempt_count": true
              }
            ],
            "validate_clusters": false
          },
          "last_updated": "2022-03-04T10:22:24.737Z"
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ClustersConfigDump",
      "dynamic_active_clusters": [
        {
          "cluster": {
            "@type": "type.googleapis.com/envoy.config.cluster.v3.Cluster",
            "name": "outbound|9080|v1|productpage.default.svc.cluster.local",
            "type": "EDS",
            "eds_cluster_config": {
              "eds_config": {
                "ads": {},
                "initial_fetch_timeout": "0s",
                "resource_api_version": "V3"
              },
              "service_name": "outbound|9080|v1|productpage.default.svc.cluster.local"
            },
            "connect_timeout": "10s",
            "lb_policy": "LEAST_REQUEST",
            "circuit_breakers": {
              "thresholds": [
                {
                  "max_connections": 4294967295,
                  "max_pending_requests": 4294967295,
                  "max_requests": 4294967295,
                  "max_retries": 4294967295,
                  "track_remaining": true
                }
              ]
            },
            "metadata": {
              "filter_metadata": {
                "istio": {
                  "default_original_port": 9080,
                  "services": [
                    {
                      "host": "productpage.default.svc.cluster.local",
                      "namespace": "default",
                      "name": "productpage"
                    }
                  ],
                  "config": "/apis/networking.istio.io/v1alpha3/namespaces/default/destination-rule/productpage",
                  "subset": "v1"
                }
              }
            },
            "filters": [
              {
                "name": "istio.metadata_exchange",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange",
                  "protocol": "istio-peer-exchange"
                }
              }
            ],
            "transport_socket_matches": [
              {
                "name": "tlsMode-istio",
                "match": {
                  "tlsMode": "istio"
                },
                "transport_socket": {
                  "name": "envoy.transport_sockets.tls",
                  "typed_config": {
                    "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                    "common_tls_context": {
                      "tls_params": {
                        "tls_minimum_protocol_version": "TLSv1_2",
                        "tls_maximum_protocol_version": "TLSv1_3"
                      },
                      "alpn_protocols": [
                        "istio-peer-exchange",
                        "istio"
                      ],
                      "tls_certificate_sds_secret_configs": [
                        {
                          "name": "default",
                          "sds_config": {
                            "api_config_source": {
                              "api_type": "GRPC",
                              "grpc_services": [
                                {
                                  "envoy_grpc": {
                                    "cluster_name": "sds-grpc"
                                  }
                                }
                              ],
                              "set_node_on_first_message_only": true,
                              "transport_api_version": "V3"
                            },
                            "initial_fetch_timeout": "0s",
                            "resource_api_version": "V3"
                          }
                        }
                      ],
                      "combined_validation_context": {
                        "default_validation_context": {
                          "match_subject_alt_names": [
                            {
                              "exact": "spiffe://cluster.local/ns/default/sa/bookinfo-productpage"
                            },
                            {
                              "exact": "spiffe://cluster.local/ns/default/sa/default"
                            }
                          ]
                        },
                        "validation_context_sds_secret_config": {
                          "name": "ROOTCA",
                          "sds_config": {
                            "api_config_source": {
                              "api_type": "GRPC",
                              "grpc_services": [
                                {
                                  "envoy_grpc": {
                                    "cluster_name": "sds-grpc"
                                  }
                                }
                              ],
                              "set_node_on_first_message_only": true,
                              "transport_api_version": "V3"
                            },
                            "initial_fetch_timeout": "0s",
                            "resource_api_version": "V3"
                          }
                        }
                      }
                    },
                    "sni": "outbound_.9080_.v1_.productpage.default.svc.cluster.local"
                  }
                }
              },
              {
                "name": "tlsMode-disabled",
                "match": {},
                "transport_socket": {
                  "name": "envoy.transport_sockets.raw_buffer",
                  "typed_config": {
                    "@type": "type.googleapis.com/envoy.extensions.transport_sockets.raw_buffer.v3.RawBuffer"
                  }
                }
              }
            ]
          }
        }
      ]
    },
    {
      "@type": "type.googleapis.com/envoy.admin.v3.ListenersConfigDump",
      "dynamic_listeners": []
    }
  ]
}
